--- a/gfbio_search_visualization.html
+++ b/gfbio_search_visualization.html
@@ -5,6 +5,14 @@
         <title>GFBio Search Visualization</title>
 
         <link rel="stylesheet" href="assets/ol.css">
+        <style type="text/css">
+            html, body {
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                padding: 0;
+            }
+        </style>
 
         <script src="assets/ol.js"></script>
         <script src="gfbio_search_visualization.js" type="text/javascript"></script>
