--- a/gfbio_search_visualization.html
+++ b/gfbio_search_visualization.html
@@ -6,7 +6,7 @@
 
         <link rel="stylesheet" href="assets/ol.css">
         <style type="text/css">
-            html, body {
+            html, body, #map {
                 width: 100%;
                 height: 100%;
                 margin: 0;
